<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Recommendation">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_bar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/Color_1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="15dp"
            android:gravity="start" >

            <ImageView
                android:id="@+id/btn_goBack"
                android:layout_width="64dp"
                android:layout_height="48dp"
                android:src="@drawable/baseline_arrow_back_24"
                app:tint="@color/white"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:textColor="@color/white"
                android:text="@string/Recommendation"
                android:fontFamily="@font/bangers_regular"
                android:textSize="32sp"/>
        </LinearLayout>
    </com.google.android.material.navigation.NavigationView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nav_bar"
        android:layout_marginTop="15dp"
        android:textSize="25sp"
        android:fontFamily="@font/bangers_regular"
        android:text="@string/Find_02"
        android:textColor="@color/Color_1"/>

    <!-- Lugar uno -->
    <LinearLayout
        android:id="@+id/lugar_01"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/text_input_background"
        app:layout_constraintTop_toBottomOf="@id/tittle">

        <androidx.cardview.widget.CardView
            android:layout_width="180dp"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tittle"
            android:layout_margin="15dp"
            app:cardCornerRadius="15dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/lugar_01"/>
        </androidx.cardview.widget.CardView>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:textSize="25sp"
                android:fontFamily="@font/roboto_bold_italic"
                android:text="@string/lugar_01"
                android:textColor="@color/Color_2"
                android:gravity="center"/>
    </LinearLayout>

    <!-- Lugar dos -->

    <LinearLayout
        android:id="@+id/lugar_02"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/text_input_background"
        app:layout_constraintTop_toBottomOf="@id/lugar_01">

        <androidx.cardview.widget.CardView
            android:layout_width="180dp"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tittle"
            android:layout_margin="15dp"
            app:cardCornerRadius="15dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/lugar_02"/>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp"
            android:textSize="25sp"
            android:fontFamily="@font/roboto_bold_italic"
            android:text="@string/lugar_02"
            android:textColor="@color/Color_2"
            android:gravity="center"/>
    </LinearLayout>

    <!-- Lugar tres -->
    <LinearLayout
        android:id="@+id/lugar_03"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/text_input_background"
        app:layout_constraintTop_toBottomOf="@id/lugar_02">

        <androidx.cardview.widget.CardView
            android:layout_width="180dp"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tittle"
            android:layout_margin="15dp"
            app:cardCornerRadius="15dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/lugar_03"/>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp"
            android:textSize="25sp"
            android:fontFamily="@font/roboto_bold_italic"
            android:text="@string/lugar_03"
            android:textColor="@color/Color_2"
            android:gravity="center"/>
    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>